syntax = "proto3";

option csharp_namespace = "ChuckDeviceController.Protos";

package webhook;

service WebhookPayload {
    rpc ReceivedWebhookPayload (WebhookPayloadRequest) returns (WebhookPayloadResponse);
}

message WebhookPayloadRequest {
    string payload = 1;
    WebhookPayloadType payloadType = 2;
}

message WebhookPayloadResponse {
    WebhookPayloadStatus status = 1;
}

enum WebhookPayloadStatus {
	Ok = 0;
	Error = 1;
}

enum WebhookPayloadType {
	Pokemon = 0;
    Pokestop = 1;
    Lure = 2;
    Invasion = 3;
    Quest = 4;
    AlternativeQuest = 5;
    Gym = 6;
    GymInfo = 7;
    GymDefender = 8;
    GymTrainer = 9;
    Egg = 10;
    Raid = 11;
    Weather = 12;
    Account = 13;
}